CPG-DEV/src/objects/ProjectContact__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Contacts</relationshipLabel>
        <relationshipName>Project_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LegacyRecordID__c</fullName>
        <label>Legacy Record ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Customer Contacts</relationshipLabel>
        <relationshipName>Project_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Project_Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project_Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech_Resource</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Project Contact</label>
    <nameField>
        <displayFormat>ProjCntct{000000}</displayFormat>
        <label>Project Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>